test/files/neg/constant-multiply-overflow.scala
// scalac: -Werror -Xlint:constant

object Main {
  val long: Long = 100 * 1024 * 1024 * 1024
}
